--- a/portfolio.html
+++ b/portfolio.html
@@ -353,6 +353,20 @@
             </li>
           </ul>
         </div>
+        <form class="subscription">
+          <h3 class="title">Підпишіться на розсилку</h3>
+          <div class="subscription-container">
+            <label class="email-label">
+              <input class="email-input" type="email" name="email" placeholder="Email" />
+            </label>
+            <button type="button" class="button">
+              Підписатися
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
