Fixed input style, icon size, checkbox positioning

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="item">
               <a href="./portfolio.html" class="link site-nav-link">Портфоліо</a>
             </li>
-            <li class="item"><a href="" class="link site-nav-link">Контакти</a></li>
+            <li class="item"><a href="#" class="link site-nav-link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list contacts-list">
@@ -175,28 +175,28 @@
                 <p class="description">Product Designer</p>
                 <ul class="list socials-list">
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -218,28 +218,28 @@
                 <p class="description">Frontend Developer</p>
                 <ul class="list socials-list">
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -261,28 +261,28 @@
                 <p class="description">Marketing</p>
                 <ul class="list socials-list">
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -304,28 +304,28 @@
                 <p class="description">UI Designer</p>
                 <ul class="list socials-list">
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item">
-                    <a class="link" href="">
+                    <a class="link" href="#">
                       <svg class="icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -342,42 +342,42 @@
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list clients-list">
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-ya-and-co"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-tag-line"></use>
                 </svg>
@@ -420,28 +420,28 @@
           <h3 class="title">приєднуйтесь</h3>
           <ul class="list socials-list">
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link" href="#">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -473,54 +473,52 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
         <form class="form feedback">
           <h2 class="form-title">Залиште свої дані, ми вам передзвонимо</h2>
 
+          <label class="form-label" for="feedback-name">Ім'я</label>
           <div class="form-group-input">
-            <label class="form-label">
-              <input class="form-input" type="text" name="name" />
-              <span class="label-text">Ім'я</span>
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-person"></use>
-              </svg>
-            </label>
+            <input class="form-input" id="feedback-name" type="text" name="name" />
+            <svg class="icon">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
           </div>
 
+          <label class="form-label" for="feedback-phone">Телефон</label>
           <div class="form-group-input">
-            <label class="form-label">
-              <input class="form-input" type="tel" name="phone" />
-              <span class="label-text">Телефон</span>
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-            </label>
+            <input class="form-input" id="feedback-phone" type="tel" name="phone" />
+            <svg class="icon">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
           </div>
 
+          <label class="form-label" for="feedback-email">Пошта</label>
           <div class="form-group-input">
-            <label class="form-label">
-              <input class="form-input" type="email" name="email" />
-              <span class="label-text">Пошта</span>
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
-            </label>
+            <input class="form-input" id="feedback-email" type="email" name="email" />
+            <svg class="icon">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
           </div>
 
+          <label class="form-label" for="feedback-comment">Коментар</label>
           <div class="form-group-area">
-            <label class="form-label">
-              <textarea class="form-area" name="comment" placeholder="Введіть текст"></textarea>
-              <span class="label-text">Коментар</span>
-            </label>
+            <textarea
+              class="form-area"
+              id="feedback-comment"
+              name="comment"
+              placeholder="Введіть текст"
+            ></textarea>
           </div>
 
           <div class="form-group checkbox">
             <label class="form-label">
               <input class="form-input visually-hidden" type="checkbox" name="accept" />
-              <div class="form-checkbox">
+              <span class="form-checkbox">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
-              </div>
+              </span>
               <span class="label-text">
                 Погоджуюся з розсилкою та приймаю <a class="link" href="#">Умови договору</a>
               </span>
